--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,17 @@
         "psr-4": {"App\\": "src/"}
     },
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.1",
         "ext-dom": "*",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "^6.2",
-        "symfony/dom-crawler": "^5.3",
-        "symfony/css-selector": "^5.3",
-        "symfony/console": "^5.3",
-        "symfony/options-resolver": "^5.3",
+        "guzzlehttp/guzzle": "^6.2|^7.5.0",
+        "symfony/dom-crawler": "^5.3|^6.1",
+        "symfony/css-selector": "^5.3|^6.1",
+        "symfony/console": "^5.3|^6.1",
+        "symfony/options-resolver": "^5.3|^6.1",
         "james-heinrich/getid3": "^1.9"
     },
     "require-dev": {
-        "symfony/var-dumper": "^5.3"
+        "symfony/var-dumper": "^5.3|^6.1"
     }
 }
